[gd_scene load_steps=5 format=2]

[ext_resource path="res://testfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Tile/Tile.gd" type="Script" id=2]
[ext_resource path="res://Common/ScoreFont.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 87.5, 87.5 )

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="SupplySprite" type="Sprite" parent="."]

[node name="AnimalName" type="Label" parent="."]
visible = false
margin_left = -95.0
margin_top = -81.0
margin_right = 31.0
margin_bottom = -54.0
custom_fonts/font = ExtResource( 1 )
text = "Worm"

[node name="Plus" type="Label" parent="AnimalName"]
margin_left = 2.0
margin_top = 27.0
margin_right = 42.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -148, -10 )
custom_fonts/font = ExtResource( 1 )
text = "+5"

[node name="Minus" type="Label" parent="AnimalName"]
margin_left = 2.0
margin_top = 101.0
margin_right = 42.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "-10"

[node name="BoardSprite" type="Sprite" parent="."]
visible = false

[node name="Icons" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.866667 )

[node name="PositiveIcons" type="Node2D" parent="Icons"]
position = Vector2( 8, 0 )

[node name="Icon" type="Sprite" parent="Icons/PositiveIcons"]
position = Vector2( -48, -39 )

[node name="Icon2" type="Sprite" parent="Icons/PositiveIcons"]
position = Vector2( -14, -40 )

[node name="Icon3" type="Sprite" parent="Icons/PositiveIcons"]
position = Vector2( -81, -7 )

[node name="Icon4" type="Sprite" parent="Icons/PositiveIcons"]
position = Vector2( -46, -7 )

[node name="Icon5" type="Sprite" parent="Icons/PositiveIcons"]
position = Vector2( -11, -7 )

[node name="NegativeIcons" type="Node2D" parent="Icons"]
position = Vector2( 8, 72 )

[node name="Icon" type="Sprite" parent="Icons/NegativeIcons"]
position = Vector2( -48, -39 )

[node name="Icon2" type="Sprite" parent="Icons/NegativeIcons"]
position = Vector2( -14, -40 )

[node name="Icon3" type="Sprite" parent="Icons/NegativeIcons"]
position = Vector2( -81, -7 )

[node name="Icon4" type="Sprite" parent="Icons/NegativeIcons"]
position = Vector2( -46, -7 )

[node name="Icon5" type="Sprite" parent="Icons/NegativeIcons"]
position = Vector2( -11, -7 )

[node name="ScoreEarned" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -28.5
margin_right = 29.0
margin_bottom = 28.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "00"
align = 1

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
